--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   height: 100vh;
   display: flex;
-  flex-direction: column-reverse;
+  /* flex-direction: column-reverse; */
 }
 #one {
   background-color: rgba(46, 204, 113, 0.7);
